# WildPyRigMotion

./: CMakeLists.txt  README.md
PyDna/: PyDna.cpp
PyRigLogic/: .clang-format  PyRigLogic.cpp
